--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <br><br>
       <div id="result"></div>
       <br><br>
-      <button onclick="take_snapshot();" class = "btn btn-success"> Identify image </button>
+      <button onclick="take_snapshot();" class = "btn btn-success"> Capture image </button>
+      <button onclick="check();" class = "btn btn-success"> Identify person </button>
        <br><br>
 
       <br><br>
